--- a/index.html
+++ b/index.html
@@ -164,36 +164,36 @@
 		<h1>Activités à Marseille</h1>
 		<div id="activites_cells" class="flex-container">
 			<div class="column flex-container">
-			<a href="#" class="cell-3">
-				<img src="images/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" />
-				<h2>Vieux Port</h2>
-			</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" /></div>
+					<h2>Vieux Port</h2>
+				</a>
 			</div>
 			<div class="column flex-container">
-			<a href="#" class="cell-3">
-				<img src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" />
-				<h2>Fort des Pomègues</h2>
-			</a>
-			<a href="#" class="cell-3">
-				<img src="images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" />
-				<h2>Îles du Frioul</h2>
-			</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
+					<h2>Fort des Pomègues</h2>
+				</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" /></div>
+					<h2>Îles du Frioul</h2>
+				</a>
 			</div>
 			<div class="column flex-container">
-			<a href="#" class="cell-3">
-				<img src="images/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" />
-				<h2>Parc National des Calanques</h2>
-			</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" /></div>
+					<h2>Parc National des Calanques</h2>
+				</a>
 			</div>
 			<div class="column flex-container">
-			<a href="#" class="cell-3">
-				<img src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" />
-				<h2>Notre-Dame-de-la-Garde</h2>
-			</a>
-			<a href="#" class="cell-3">
-				<img src="images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" />
-				<h2>Parc Longchamp</h2>
-			</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
+					<h2>Notre-Dame-de-la-Garde</h2>
+				</a>
+				<a href="#" class="cell-3">
+					<div class="image-crop3"><img src="images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" /></div>
+					<h2>Parc Longchamp</h2>
+				</a>
 			</div>
 		</div>
 	</section>
