--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 			</div>
 			<div class="column flex-container">
 				<a href="#" class="cell-3">
-					<div class="image-crop3"><img src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
+					<div class="image-crop3"><img class="img-wide" src="images/activites/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" /></div>
 					<h2>Fort des Pomègues</h2>
 				</a>
 				<a href="#" class="cell-3">
-					<div class="image-crop3"><img src="images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" /></div>
+					<div class="image-crop3"><img class="img-wide" src="images/activites/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="" /></div>
 					<h2>Îles du Frioul</h2>
 				</a>
 			</div>
@@ -187,11 +187,11 @@
 			</div>
 			<div class="column flex-container">
 				<a href="#" class="cell-3">
-					<div class="image-crop3"><img src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
+					<div class="image-crop3"><img class="img-wide" src="images/activites/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" /></div>
 					<h2>Notre-Dame-de-la-Garde</h2>
 				</a>
 				<a href="#" class="cell-3">
-					<div class="image-crop3"><img src="images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" /></div>
+					<div class="image-crop3"><img class="img-wide" src="images/activites/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" /></div>
 					<h2>Parc Longchamp</h2>
 				</a>
 			</div>
