--- a/index.html
+++ b/index.html
@@ -127,37 +127,39 @@
 				<h1>Les plus populaires</h1>
 				<i class="fas fa-chart-line"></i>
 			</div>
-			<a href="#" class="cell-1">
-				<div class="image-crop1"><img src="images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" /></div>
-				<h2>Hôtel Le soleil du matin</h2>
-				<p>Nuit à partir de 128<strong>€</strong></p>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-			</a>
-			<a href="#" class="cell-1">
-				<div class="image-crop1"><img src="images\hebergements\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" /></div>
-				<h2>Au cœur de l'eau Chambres d'hôtes</h2>
-				<p>Nuit à partir de 71<strong>€</strong></p>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-lgray"></i>
-			</a>
-			
-			<a href="#" class="cell-1">
-				<div class="image-crop1"><img src="images\hebergements\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" /></div>
-				<h2>Hôtel Tout bleu et Blanc</h2>
-				<p>Nuit à partir de 68<strong>€</strong></p>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-blue"></i>
-				<i class="fas fa-star star-lgray"></i>
-			</a>
+			<div id="populaires_cells" class="flex-container">
+				<a href="#" class="cell-1">
+					<div class="image-crop1"><img src="images/hebergements/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" /></div>
+					<h2>Hôtel Le soleil du matin</h2>
+					<p>Nuit à partir de 128<strong>€</strong></p>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+				</a>
+				<a href="#" class="cell-1">
+					<div class="image-crop1"><img src="images\hebergements\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" /></div>
+					<h2>Au cœur de l'eau Chambres d'hôtes</h2>
+					<p>Nuit à partir de 71<strong>€</strong></p>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-lgray"></i>
+				</a>
+				
+				<a href="#" class="cell-1">
+					<div class="image-crop1"><img src="images\hebergements\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" /></div>
+					<h2>Hôtel Tout bleu et Blanc</h2>
+					<p>Nuit à partir de 68<strong>€</strong></p>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-blue"></i>
+					<i class="fas fa-star star-lgray"></i>
+				</a>
+			</div>
 		</section>
 	</div>
 	<section id="activites" class="flex-container">
