--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<h2>Afficher plus</h2>
 		</section>
 		<section id="plus_populaires" class="flex-container">
-			<div id="titre">
+			<div id="titre" class="flex-container">
 				<h1>Les plus populaires</h1>
 				<i class="fas fa-chart-line"></i>
 			</div>
