media queries done / repace some images

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 			<!--logo=link to homepage / edit 'href' ?-->
 			<a id="logo" href="index.html"><img src="images/logo/Reservia.svg" alt="Logo Reservia"></a>
 			<a id="subscribe" href=""><p>S'inscrire</p></a> <!--subsribe=link to appropriate page-->
-			<nav>
-				<ul>
-					<li><a href="#hebergements">Hébergements</a></li>
-					<li><a href="#activites">Activités</a></li>
-				</ul>
+			<nav class="flex-container">
+				<a href="#hebergements">Hébergements</a>
+				<a href="#activites">Activités</a>
 			</nav>
 		</div>
 		<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
